<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/active_background"
                android:padding="10dp"
                android:visibility="gone"
                android:onClick="onInstallPack">

    <io.rapidpro.androidchannel.ui.IconTextView
            android:id="@+id/throttle_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-8dp"
            android:text="@string/icon_throttle_okay"
            android:textColor="@color/font_green"
            android:textSize="35dp"/>

    <TextView
            android:id="@+id/throttle_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/throttle_icon"
            android:text="Increase Your Message Capacity"
            android:layout_marginStart="5dp"
            android:textColor="@color/font_green"
            android:textStyle="bold"
            android:textSize="20dp"/>

    <TextView
            android:id="@+id/throttle_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/throttle_title"
            android:layout_alignParentStart="true"
            android:textColor="@color/font_black"
            android:text="@string/throttle_warning"
            android:textSize="16dp"/>

    <TextView
            android:id="@+id/throttle_install_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/throttle_message"
            android:layout_marginTop="10dp"
            android:layout_alignParentStart="true"
            android:textColor="@color/font_black"
            android:text="@string/throttle_packs_remaining"
            android:textSize="16dp"/>

</RelativeLayout>
