<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingTop="5dp"
              android:paddingBottom="5dp"
              android:background="@drawable/status_bar_background"
              android:onClick="onStatusClick" android:baselineAligned="false">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0px"
            android:layout_height="38dp"
            android:layout_weight="1">

        <io.rapidpro.androidchannel.ui.IconTextView
                android:id="@+id/outgoing_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_gravity="center"
                android:text="@string/icon_bubble_right"
                android:textColor="@color/font_status_bar"
                android:textSize="35dp"/>

        <io.rapidpro.androidchannel.ui.FontFitTextView
                android:id="@+id/outgoing_count"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/font_status_bar"
                android:layout_marginStart="5dp"
                android:layout_marginTop="-4dp"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:textSize="40dp"
                android:includeFontPadding="false"
                android:text="40"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0px"
            android:layout_height="38dp"
            android:layout_weight="1">

        <io.rapidpro.androidchannel.ui.IconTextView
                android:id="@+id/sync_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="-3dp"
                android:layout_gravity="center"
                android:text="@string/icon_cloud"
                android:textColor="@color/font_status_bar"
                android:textSize="40dp"/>

        <io.rapidpro.androidchannel.ui.FontFitTextView
                android:id="@+id/sync_count"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/font_status_bar"
                android:textSize="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginTop="-4dp"
                android:gravity="center_vertical"
                android:includeFontPadding="false"
                android:text="40"/>

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0px"
            android:layout_height="38dp"
            android:layout_weight="1">

        <io.rapidpro.androidchannel.ui.IconTextView
                android:id="@+id/retry_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_gravity="center"
                android:text="@string/icon_bubble_bang"
                android:textColor="@color/font_status_bar"
                android:textSize="35dp"/>

        <io.rapidpro.androidchannel.ui.FontFitTextView
                android:id="@+id/retry_count"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/font_status_bar"
                android:layout_marginStart="5dp"
                android:layout_marginTop="-4dp"
                android:layout_marginBottom="0dp"
                android:gravity="center_vertical"
                android:layout_gravity="center"
                android:textSize="40dp"
                android:includeFontPadding="false"
                android:text="40"/>
    </LinearLayout>

</LinearLayout>
